Update recommendation service: add unit tests, fix Jenkinsfile structure, and improve Java 17 compatibility